adjust padding to avoid wrap in report obs fx pair table (#354)

--- a/sfa_dash/static/css/styles.css
+++ b/sfa_dash/static/css/styles.css
@@ -469,7 +469,9 @@ th.selection-column{
     padding-bottom: 1em;
     margin-bottom: 1em;
 }
-
+table.obsfx-table td{
+    padding: .5rem;
+}
 #metrics-sort-list{
     list-style: none;
     padding-left: 0;
